@@ -39,6 +39,7 @@ $ -> Language fix or change
  # [#21170] Changes made in description after toggling the editor are not saved. Thanks CY Lee.
  $ [#21257] Inaccurate string in contact. Thanks Elin.
  $ Correcting key typo.
+# [#21255] module modal - missing module assignment description. Thanks Bill.
 
 29-Jun-2010 Ian MacLennan
  # [#20959] Single Newsfeed Display Options parameters
